# hollow-pulse

./: .gitignore  meson.build
documents/: GDD.md  acts-summary.md  beat-sheet.md  book-of-changes.md  screenplay.md
include/: utility.h
src/: main.c
